# rman-rs

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  index.html
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  config.yml
.github/workflows/: ci.yml  publish.yml
main/: crates.js  help.html  index.html  search-index.js  settings.html
main/rman/: all.html  enum.ManifestError.html  index.html  sidebar-items.js  struct.File.html  struct.Header.html  struct.ManifestData.html  struct.RiotManifest.html  type.Result.html
main/rman/entries/: index.html  sidebar-items.js  struct.BundleEntry.html  struct.ChunkEntry.html  struct.ChunkingParamEntry.html  struct.DirectoryEntry.html  struct.FileEntry.html  struct.KeyEntry.html  struct.TagEntry.html
main/rman/error/: type.Result.html
main/src/rman/: entries.rs.html  (+5 more)
src/: entries.rs  error.rs  file.rs  generated.rs  lib.rs  main.rs  parser.rs  structs.rs
src/entries/: bundle_entry.rs  chunk_entry.rs  chunking_param_entry.rs  directory_entry.rs  file_entry.rs  key_entry.rs  language_entry.rs  param_entry.rs  tag_entry.rs
src/error/: cursor_error.rs  manifest_error.rs  read_error.rs
src/parser/: file.rs  header.rs  manifest.rs
src/structs/: cursor.rs
tests/: test.rs
tests/common/: mod.rs
v0.3.0/: index.html  search-index.js  settings.html  src-files.js
v0.3.0/rman/: enum.ManifestError.html  struct.File.html  struct.Header.html  struct.ManifestData.html  struct.RiotManifest.html
(+67 files in other folders)
