[package]
name = "rman-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
flatbuffers = "22.10.26"
log = "0.4.17"
paste = "1.0.11"
serde = { version = "1.0.152", features = ["derive"], optional = true }
thiserror = "1.0.38"
zstd = "0.12.1"

[build-dependencies]
flatbuffers = "22.10.26"
zstd = "0.12.1"

[features]
default = []
version_error = []
serde = ["dep:serde"]
