[package]
name = "rman"
version = "0.3.0"
authors = ["ev3nvy"]
edition = "2021"
description = "Parser for Riot Manifest file format."
repository = "https://github.com/ev3nvy/rman-rs"
license = "MIT OR Apache-2.0"
keywords = ["rman", "riot", "rito", "manifest", "riot-manifest"]
categories = ["data-structures", "encoding", "parser-implementations"]

[dependencies]
byteorder = "1.4.3"
flatbuffers = "22.10.26"
log = "0.4.17"
reqwest = { version = "0.11.14", default_features = false }
serde = { version = "1.0.152", features = ["derive"], optional = true }
thiserror = "1.0.38"
zstd = "0.12.1"

[build-dependencies]
flatbuffers = "22.10.26"
zstd = "0.12.1"

[dev-dependencies]
httptest = "0.15.4"
tokio = { version = "1.25.0", default_features = false, features = ["macros", "rt-multi-thread"] }

[features]
default = ["rustls-tls"]
version_error = []
serde = ["dep:serde"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
